# WireX

./: LICENSE  README.md
wirex-master/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  readme.md
wirex-master/Eigen/unsupported/Eigen/: LevenbergMarquardt
wirex-master/IPAGL/: Dib.cpp  Dib.h  GL3DS.cpp  GL3DS.h  GLGeometry.h  GLMemoryContext.cpp  GLMemoryContext.h  GLScene.cpp  GLScene.h  GLShape.cpp  GLShape.h  IPAGL.2015.vcxproj  IPAGL.vcproj  IPAGLu.vcproj
wirex-master/MPy/: MPy.2015.vcxproj  MPy.cpp  pyBindings.cpp  pyBindings.h  setup.py
wirex-master/Python/: _Readme.txt
wirex-master/Scripts/: CrossSectionPlot.py  OptimalDesignPlanar.py  PE_Preprocessor.py  TorusPlot.py  WcCsv.py  WorkspaceVolumePlot.py  htmlreport.py  reporter.py  wcGuiUnitTest.py  wcStl.py  wcUnitTest.py  wireCenterRPC.py
wirex-master/WiPy/: CMakeLists.txt  WiPy.2015.vcxproj  WiPy.cpp  pyBindings.cpp  pyBindings.h  setup.py
wirex-master/WireCenter/: WireCenter.2015.sln  deploy.bat  makeall.bat
wirex-master/WireCenter/WireCenter/: AlgorithmConfigPane.cpp  AlgorithmConfigPane.h  CableForceDlg.cpp  CableForceDlg.h  ConsoleDlg.cpp  ConsoleDlg.h  DraftDlgs.cpp  DraftDlgs.h  GenericParamDlg.cpp  GenericParamDlg.h  GeometryDlg.cpp  GeometryDlg.h  GeometryView.cpp  GeometryView.h  IPAnema.txt  IPC.cpp  IPC.h  InteractiveGeometryDlg.cpp  InteractiveGeometryDlg.h  LegGeometryDlg.cpp  LegGeometryDlg.h  MainFrm.cpp  MainFrm.h  NCDlg.cpp  NCDlg.h  OrientationDlg.cpp  OrientationDlg.h  PathGenerator.cpp  PathGenerator.h  PersistantDefaultValue.cpp  PersistantDefaultValue.h  PoseDlg.cpp  PoseDlg.h  PoseEvaluatorDlg.cpp  PoseEvaluatorDlg.h  PyScriptDlg.cpp  PyScriptDlg.h  PythonInterface.cpp  PythonInterface.h  Reflection.cpp  (+29 more)
wirex-master/WireCenter/WireCenter/res/: WireCenter.rc2  copyright.txt  ribbon1.mfcribbon-ms
wirex-master/WireCenter/wcPlugin/: wcDllApi.h  wcInterface.h
wirex-master/WireLib/: Algorithm.cpp  Algorithm.h  ApplicationRequirement.cpp  ApplicationRequirement.h  CMakeLists.txt  CableWear.cpp  CableWear.h  EigenLib.h  EigenPlugins.h  EnumTables.h  ForceLimits.cpp  ForceLimits.h  GeometryGenerator.cpp  GeometryGenerator.h  Interference.cpp  Interference.h  Kinematics.cpp  Kinematics.h  PoseEvaluator.cpp  PoseEvaluator.h  PoseList.h  PosePropertyEvaluation.cpp  PosePropertyEvaluation.h  Reflection.cpp  Reflection.h  RobotData.cpp  RobotData.h  RobotData6.cpp  RobotData6.h  RobotDocument.cpp  RobotDocument.h  Shapes.h  StructureMatrix.cpp  StructureMatrix.h  TechKB.h  WireLib.h  Workspace.cpp  Workspace.h  levmar.cpp  levmar.h
wirex-master/WireLibPyBindings/: CMakeLists.txt  IcontrolBindings.cpp  IkinBindings.cpp  IrobotBindings.cpp  IwsBindings.cpp  WireLibPyBindings.2015.vcxproj  WireLibPyBindings.h  pyHelper.cpp
wirex-master/config/cad/: IPAnema1_winch.3ds  IPAnema3_winch.wrl
wirex-master/config/nc/: EndLessZ.nc  IPAnema_Demo_asp.nc  Kinematic_Test.nc
wirex-master/config/python/: EndlessZ.py
wirex-master/config/robots/: 2DIPAnema2.wcrfx  COPacabana_Handling.wcrfx  COPacabana_Inspection.wcrfx  CableMasterRobot.wcrfx  CoGiRo.wcrfx  EXPO2015_Lucia.wcrfx  EXPO2015_Roberto.wcrfx  EndlessZ-PaperIAK2013.wcrfx  ExpoLeft.wcrfx  ExpoRight.wcrfx  HRPCables.wcrfx  IPAnema.wcrfx  IPAnema2.wcrfx  MACARM.wcrfx  Segesta.wcrfx  WDPSS.wcrfx
wirex-master/doc/: Doxyfile.WireCenter  WireCenterTutorial.tex  WireCenter_footer.html  WireCenter_header.html  WireDoc.tex  XmlFileFormatStructure.eps  XmlFormat.tex  XmlSpec.tex  dox.bat  generateWiPyOverview.py
wirex-master/motionPlanning/: CMakeLists.txt  EigenLib.h  EigenPlugins.h  NcDoc.cpp  NcDoc.h  NcInterpolator.cpp  NcInterpolator.h  NcParser.cpp  NcParser.h  NcProgram.cpp  NcProgram.h  PoseList.h  Utilities.cpp  Utilities.h  motionPlanningLib.h
wirex-master/motionPlanningPyBindings/: CMakeLists.txt  IcontrolBindings.cpp  motionPlanningPyBindings.2015.vcxproj  motionPlanningPyBindings.h  pyHelper.cpp
wirex-master/sqlite/: CMakeLists.txt
wirex-master/tinyXML/: CMakeLists.txt
